# Actus_Neopiritus

./: .gitignore  README.md
Lab4/: README.md  实验报告-测试.md  实验报告-补充.md  实验报告-部署.md
Lab4/src/: data.xlsx  ~$data.xlsx
arceos/: Cargo.toml  Makefile  rust-toolchain.toml
arceos/apps/task/parallel/: Cargo.toml
arceos/apps/task/priority/: Cargo.toml
arceos/apps/task/realtime/: Cargo.toml
arceos/apps/task/realtime/src/: main.rs
arceos/apps/task/sleep/: Cargo.toml
arceos/apps/task/starvation/: Cargo.toml
arceos/apps/task/starvation/src/: main.rs
arceos/apps/task/yield/: Cargo.toml
arceos/crates/allocator/: Cargo.toml
arceos/crates/allocator/src/: bitmap.rs  lib.rs
arceos/crates/bitmap_allocator/src/: lib.rs
arceos/crates/scheduler/src/: README.md  lib.rs  mlfq.rs  tests.rs
arceos/modules/TEST/: Cargo.toml  README.md
arceos/modules/TEST/src/: main.rs  test_common.rs  test_ramfs.rs
arceos/modules/axconfig/: Cargo.toml
arceos/modules/axconfig/src/: lib.rs
arceos/modules/axfs/: Cargo.toml
arceos/modules/axfs/resources/: create_ext2.sh
arceos/modules/axfs/tests/: test_fs.rs
arceos/modules/axhal/: Cargo.toml
arceos/modules/axtask/: Cargo.toml
arceos/modules/axtask/src/: api.rs
arceos/scripts/make/: qemu.mk
arceos/ulib/libax/: Cargo.toml
docs/: OSH初步计划.docx  调研报告.docx
history-docs/: EXT2实现及测试.md  IDAllocator.md  MLFQ原理、实现及测试.md  rust+os和可靠性os的简单调研.docx  分布式部署.md  可行性计划讨论.md  项目计划（初步）.md
history-docs/plan/: 与架构有关文件  第11~12周分工安排.md
plan/: 更改架构文档.md
researches/: 中期汇报.pptx  可行性报告.md  结题报告.md  结题汇报.pptx  调研报告.md  运行项目指南.md
(+13 files in other folders)
