[package]
name = "TEST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axio = { path = "../../crates/axio", features = ["alloc"] }
axfs = { path = "../axfs"}
driver_block = { path = "../../crates/driver_block" }
axtask = { path = "../axtask", features = ["test"] }
